src/test/resources/30/single/xhtml/invalid/switch-default-before-case.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
    xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>switch invalid</title>
    </head>
    <body>
        <p>
            <epub:switch id="inline">
                <!-- epub:default shouldn't precede epub:case -->
                <epub:default> foo <span>bar</span>
                    <em>baz</em>
                </epub:default>
                <epub:case required-namespace="http://www.example.org/inline"
                    xmlns:foo="http://www.example.org/inline"> foo <foo:span>bar</foo:span>
                    <em>baz</em>
                </epub:case>
            </epub:switch>
        </p>
    </body>
</html>
